--- a/client/src/account/_account.scss
+++ b/client/src/account/_account.scss
@@ -1,6 +1,6 @@
 md-dialog.account {
   width:450px;
-  height:350px;
+  height:370px;
   & md-dialog-content{
     overflow: hidden;
     margin:20px;
@@ -8,8 +8,62 @@ md-dialog.account {
       color: #777;
       margin: 0 0 30px 0;
     }
+    & .md-datepicker-input-container {
+      margin:0;
+      padding-left:30px;
+      width:calc(100% - 30px);
+      & .md-datepicker-input {
+        width:100%;
+      }
+    }
+    & .md-datepicker-button {
+      margin: 0 -30px 0 -10px;
+      padding: 12px 0;
+      border-radius:0;
+    }
+    & .cc {
+      height:220px;
+      width:400px;
+      border-radius:15px;
+      background:#f5f5f5 url('../images/maze.png');
+      border:1px solid #ccc;
+      margin: 15px auto;
+      position:relative;
+      text-align: center;
+      font-size:22px;
+      color:#777;
+      > * {
+        position:absolute;
+      }
+      & .card {
+        top:17px; right:20px;
+        font-weight:bold;
+        font-style: italic;
+      }
+      & .number {
+        top:40%; right:20px;
+        letter-spacing: 2px;
+        font-size:28px;
+      }
+      & .exp {
+        bottom:20px; right:20px;
+        font-size:18px;
+      }
+      & .delete {
+        top:5px; left:2px;
+      }
+      & .change {
+        bottom:5px; left:5px;
+        border:1px solid #ddd;
+        // font-size:12px;
+      }
+      & .md-button {
+        box-shadow: none;
+        padding:0px 15px;
+      }
+    }
   }
-  & md-dialog-actions{
+  & md-dialog-actions {
     position:absolute;
     bottom:0;left:0;right:0;
     background: #f5f5f5;
